--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@replit/database": "^2.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
     "json-stringify-safe": "^5.0.1",
-    "nodemailer": "^6.4.17"
+    "nodemailer": "^6.4.17",
+    "nodemailer-express-handlebars": "^4.0.0",
+    "nodemailer-html-to-text": "^3.1.0"
   }
 }
