--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "json-stringify-safe": "^5.0.1",
     "nodemailer": "^6.4.17",
     "nodemailer-express-handlebars": "^4.0.0",
-    "nodemailer-html-to-text": "^3.1.0"
+    "nodemailer-html-to-text": "^3.1.0",
+    "ping": "^0.4.0"
   }
 }
